Fix horizontal scrolling on mobile; Shrink chatbox when rightbar is showing on medium resolutions

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -11,6 +11,8 @@
   --padding: 0.5rem;
 
   --hover-opacity: 0.9;
+
+  --font-family: 'Open Sans', sans-serif;
 }
 
 * {
@@ -33,8 +35,11 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--font-family);
   color: hsl(224, 39%, 11%);
   line-height: 1.5;
-  overflow: hidden;
+}
+
+#root {
+  min-height: 100vh;
 }
